--- a/templates/index.html
+++ b/templates/index.html
@@ -766,11 +766,11 @@ Zapisanie się do turnieju jest równoznaczne z akceptacją wszystkich punktów 
                 <ul class="info-list">
                     <li>
                         <strong>Organizator:</strong>
-                        <a href="https://discordapp.com/users/397785664373915659" target="_blank" rel="noopener noreferrer">Kliknij, aby skontaktować się (Discord)</a>
+                        <a href="https://discordapp.com/users/397785664373915659" target="_blank" rel="noopener noreferrer">Akerman88</a>
                     </li>
                     <li>
                         <strong>Dział Techniczny:</strong>
-                        <a href="https://discordapp.com/users/605726001539973121" target="_blank" rel="noopener noreferrer">Kliknij, aby skontaktować się (Discord)</a>
+                        <a href="https://discordapp.com/users/605726001539973121" target="_blank" rel="noopener noreferrer">KAROL3K</a>
                     </li>
                 </ul>
             </section>
