--- a/templates/index.html
+++ b/templates/index.html
@@ -503,7 +503,7 @@
             </section>
 
             <section id="sponsorzy" class="info-section content-section">
-                <h3>Sponsorzy (Dobrowolne Wpisowe)</h3>
+                <h3>Sponsorzy</h3>
                 <p>Wielkie podziękowania dla wszystkich, którzy wsparli pulę nagród turnieju! Każda donacja wspiera społeczność.</p>
 
                 <div class="results-table-container">
