--- a/templates/index.html
+++ b/templates/index.html
@@ -516,8 +516,8 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td></td>
-                                <td style="text-align: center; color: #ffc107; font-weight: bold;"></td>
+                                <td>MorderczeJajo</td>
+                                <td style="text-align: center; color: #ffc107; font-weight: bold;">50zł</td>
                             </tr>
                             <tr>
                                 <td></td>
