--- a/templates/index.html
+++ b/templates/index.html
@@ -688,6 +688,7 @@ Organizator: PUBG POLSKA
 Data Turnieju: godzina 18.00 - 29 listopad 2025 r. (Sobota)
 Platforma: PC (Steam)
 Format: SQUAD (4-osobowe drużyny), tryb FPP (First Person Perspective)
+Region:PL
 Oficjalna Transmisja: Turniej będzie transmitowany na żywo na kanale twitch.tv/akerman88
 Komunikacja: Oficjalnym kanałem komunikacji z administracją i miejscem ogłoszeń jest dedykowany serwer Discord. Podczas trwania turnieju, obecność na serwerze oraz korzystanie z dedykowanych kanałów głosowych drużyn jest obowiązkowe.
 
