--- a/templates/index.html
+++ b/templates/index.html
@@ -694,6 +694,8 @@ Komunikacja: Oficjalnym kanałem komunikacji z administracją i miejscem ogłosz
 
 II. Zapisy i Wpisowe
 Zapisy odbywają się poprzez oficjalny formularz udostępniony przez Organizatora.
+Maksymalna liczba drużyn na turnieju wynosi 18.
+W przypadku zapisania się większej ilości zespołów, o udziale w turnieju będzie decydować kolejność zgłoszeń.
 Udział w turnieju jest darmowy.
 Organizatorzy zbierają dobrowolne wpisowe od chętnych drużyn i graczy w celu ufundowania puli nagród.
 Dane do wpłaty zostaną udostępnione kapitanom drużyn po pomyślnej rejestracji.
