--- a/templates/index.html
+++ b/templates/index.html
@@ -694,6 +694,8 @@ Komunikacja: Oficjalnym kanałem komunikacji z administracją i miejscem ogłosz
 
 II. Zapisy i Wpisowe
 Zapisy odbywają się poprzez oficjalny formularz udostępniony przez Organizatora.
+Wziąć udział w wydarzeniu mogą jedynie gracze, którzy mają ukończone 18 lat.
+Podanie nieprawdziwych danych dotyczących wieku skutkuje natychmiastową dyskwalifikacją całej drużyny oraz może wiązać się z utratą ewentualnych nagród.
 Maksymalna liczba drużyn na turnieju wynosi 18.
 W przypadku zapisania się większej ilości zespołów, o udziale w turnieju będzie decydować kolejność zgłoszeń.
 Udział w turnieju jest darmowy.
