--- a/templates/index.html
+++ b/templates/index.html
@@ -494,7 +494,7 @@
                     <li><strong>Data:</strong> 29 Listopada 2025 (Sobota), start 18:00</li>
                     <li><strong>Format:</strong> SQUAD FPP (drużyny 4-osobowe)</li>
                     <li><strong>Serwer:</strong> EU</li>
-                    <li><strong>Mapy:</strong> 2× Miramar, Taego, Rondo oraz 2× Erangel</li>
+                    <li><strong>Mapy:</strong> 2× Miramar, Rondo, Taego oraz 2× Erangel</li>
                     <li><strong>Pula nagród:</strong> Z dobrowolnych wpisowych (50%/30%/20%)</li>
                     <li><strong>Wpisowe:</strong> Dobrowolne</li>
                     <li><strong>Transmisja:</strong> <a href="https://twitch.tv/akerman88" target="_blank">twitch.tv/akerman88</a></li>
