--- a/templates/index.html
+++ b/templates/index.html
@@ -498,7 +498,7 @@
                     <li><strong>Pula nagród:</strong> Z dobrowolnych wpisowych (50%/30%/20%)</li>
                     <li><strong>Wpisowe:</strong> Dobrowolne</li>
                     <li><strong>Transmisja:</strong> <a href="https://twitch.tv/akerman88" target="_blank">twitch.tv/akerman88</a></li>
-                    <li><strong>Discord:</strong> <a href="https://discadia.com/pubgpolska" target="_blank">Dołącz do serwera (Kliknij!)</a></li>
+                    <li><strong>Discord:</strong> <a href="https://discadia.com/pubgpolska" target="_blank">PUBG POLSKA</a></li>
                 </ul>
             </section>
 
