--- a/templates/index.html
+++ b/templates/index.html
@@ -705,7 +705,7 @@ Wniesienie opłaty nie jest wymagane do wzięcia udziału w grach, jednak pula n
 Gracze posiadający aktywną blokadę (bana) na serwerze Discord PUBG POLSKA mają zakaz udziału w turnieju.
 
 III. Pula Nagród
-Całkowita pula nagród zależy od sumy zebranych dobrowolnych wpisowych.
+Całkowita pula nagród zależy od sumy zebranych dobrowolnych wpisowych oraz donejtów od sponsorów.
 100% zebranej kwoty zostanie rozdzielone pomiędzy trzy najlepsze drużyny turnieju.
 Podział puli nagród:
 1. Miejsce: 50% puli
