--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" href="https://i.imgur.com/HcTRskR.png" type="image/png">
     <link rel="shortcut icon" href="https://i.imgur.com/HcTRskR.png" type="image/png">
-    
+
     <style>
         /* ------- Globalne Style ------- */
         html {
@@ -452,6 +452,15 @@
         }
 
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-94Z01SBR91"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-94Z01SBR91');
+</script>
 </head>
 <body>
 
