--- a/templates/index.html
+++ b/templates/index.html
@@ -737,7 +737,7 @@ Punkty za miejsce:
 9-16. miejsce: 0 punktów
 Ostateczna klasyfikacja jest tworzona na podstawie sumy punktów (za miejsce + za zabójstwa) ze wszystkich 6 gier.
 Zasady rozstrzygania remisów (Tie-break): W przypadku remisu punktowego o wyższym miejscu decyduje:
-a) Łączna liczba zabójstw (Kills) we wszystkich meczach.
+a) Łączna liczba placement points we wszystkich meczach.
 b) Najwyższa liczba punktów zdobyta w pojedynczej grze.
 c) Najwyższe miejsce zajęte w ostatnim meczu turnieju.
 
