--- a/templates/index.html
+++ b/templates/index.html
@@ -528,8 +528,12 @@
                                 <td style="text-align: center; color: #ffc107; font-weight: bold;">50zł</td>
                             </tr>
                             <tr>
-                                <td></td>
-                                <td style="text-align: center; color: #ffc107; font-weight: bold;"></td>
+                                <td>XserXses9</td>
+                                <td style="text-align: center; color: #ffc107; font-weight: bold;">50zł</td>
+                            </tr>
+                            <tr>
+                                <td>Team NYSA</td>
+                                <td style="text-align: center; color: #ffc107; font-weight: bold;">80zł</td>
                             </tr>
                         </tbody>
                     </table>
