--- a/templates/index.html
+++ b/templates/index.html
@@ -616,6 +616,10 @@
                             <span class="sponsor-name">Team NYSA</span>
                             <span class="sponsor-amount">80 PLN</span>
                         </div>
+                        <div class="sponsor-card">
+                            <span class="sponsor-name">zManian</span>
+                            <span class="sponsor-amount">100 PLN</span>
+                        </div>
                     </div>
 
                     <div class="sponsor-total">
