--- a/templates/index.html
+++ b/templates/index.html
@@ -573,9 +573,9 @@
                 <h3>Zapisy na turniej SQUAD FPP</h3>
                 <p>Wypełnij formularz zgłoszeniowy, klikając przycisk poniżej.</p>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSeaYLKta8D83Xnfanm4tXVUtqX0273o7P1MJEowvVPqI6Crdg/viewform?usp=publish-editor" target="_blank" class="cta-button">
-                    ZAPISZ DRUŻYNĘ!
+                    ZAPISZ DRUŻYNĘ NA LISTĘ REZERWOWĄ!
                 </a>
-                <p style="margin-top: 20px; font-size: 0.9em;">Liczba miejsc ograniczona. Decyduje kolejność zgłoszeń.</p>
+                <p style="margin-top: 20px; font-size: 0.9em;">Liczba miejsc w turnieju została wyczerpana. Jeśli dalej jesteś zainteresowany wzięciem udziału, zapisz się na listę rezerwową.</p>
             </section>
 
             <section class="content-section sponsor-image-section">
@@ -619,6 +619,14 @@
                         <div class="sponsor-card">
                             <span class="sponsor-name">zManian</span>
                             <span class="sponsor-amount">100 PLN</span>
+                        </div>
+                        <div class="sponsor-card">
+                            <span class="sponsor-name">Ciągnie po nogach</span>
+                            <span class="sponsor-amount">180 PLN</span>
+                        </div>
+                        <div class="sponsor-card">
+                            <span class="sponsor-name">ADHD </span>
+                            <span class="sponsor-amount">300 PLN</span>
                         </div>
                     </div>
 
