--- a/templates/index.html
+++ b/templates/index.html
@@ -610,7 +610,7 @@
         STWÓRZ SWOJE FANTASY
     </a>
 
-    <p style="margin-top: 20px; font-size: 0.9em;">Kliknij przycisk powyżej, aby przejść do aplikacji Fantasy Draft.</p>
+    <p style="margin-top: 20px; font-size: 0.9em;">Kliknij przycisk powyżej, aby przejść do aplikacji Fantasy Coach.</p>
 </section>
 
             <section class="content-section sponsor-image-section">
