--- a/templates/index.html
+++ b/templates/index.html
@@ -592,7 +592,7 @@
         </header>
 
         <nav class="navbar">
-            <a href="#zapisy">Fantasy Coach</a>
+            <a href="#fantasycoach">Fantasy Coach</a>
             <a href="#szczegoly">Szczegóły</a>
             <a href="#sponsorzy">Sponsorzy</a>
             <a href="#teamy">Zapisane Teamy</a>
@@ -646,6 +646,10 @@
                         <div class="sponsor-card">
                             <span class="sponsor-name">XserXses9</span>
                             <span class="sponsor-amount">50 PLN</span>
+                        </div>
+                        <div class="sponsor-card">
+                            <span class="sponsor-name">JANOVSKI</span>
+                            <span class="sponsor-amount">80 PLN</span>
                         </div>
                         <div class="sponsor-card">
                             <span class="sponsor-name">Team NYSA</span>
