--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,7 @@
             max-width: 900px;
             margin: 20px auto;
             background-color: rgba(30, 30, 30, 0.9);
+	    padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
             overflow: hidden;
